--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,24 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context="com.retail.hackathon.retail.MainActivity2">
+	tools:context="com.retail.hackathon.retail.MainActivity">
 
 	<TextView
+		android:id="@+id/textView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Hello World!"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+		android:layout_marginLeft="18dp"
+		android:layout_marginTop="45dp"
+		app:layout_constraintLeft_toRightOf="@+id/portrait"
+		app:layout_constraintTop_toTopOf="parent"
+		tools:text="Bem-vindo!" />
 
+	<com.liferay.mobile.screens.userportrait.UserPortraitScreenlet
+		android:id="@+id/portrait"
+		android:layout_width="80dp"
+		android:layout_height="80dp"
+		android:layout_marginLeft="16dp"
+		android:layout_marginTop="33dp"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
